add vthread